--- a/.github/workflows/cd-sync.yaml
+++ b/.github/workflows/cd-sync.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   pull_request:
     branches:
-      - develop
+      - main
     types: [closed]
 
 jobs:
@@ -60,9 +60,9 @@ jobs:
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }} 
           package: .
 
-      - name: REMOVE ARTIFACT
-        run: |
-          rm node-app.zip
+      - uses: geekyeggo/delete-artifact@v2
+        with:
+          name: react-app
 
   sync:
     runs-on: ubuntu-latest
