--- a/package.json
+++ b/package.json
@@ -20,5 +20,6 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
-  }
+  },
+  "packageManager": "npm@10.1.0"
 }
