--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,61 +8,36 @@ variables:
 
   environmentName: "nodejs-azure-app-service"
 
-  vmImageName: "ubuntu-latest"
+pool:
+  vmImage: "ubuntu-latest"
 
-stages:
-  - stage: Build
-    displayName: Build stage
-    jobs:
-      - job: Build
-        displayName: Build
-        pool:
-          vmImage: $(vmImageName)
+steps:
+  - task: NodeTool@0
+    inputs:
+      versionSpec: "10.x"
+    displayName: "Install Node.js"
 
-        steps:
-          - task: NodeTool@0
-            inputs:
-              versionSpec: "10.x"
-            displayName: "Install Node.js"
+  - script: |
+      npm install
+      npm run build --if-present
+      npm run test --if-present
+    displayName: "npm install, build and test"
 
-          - script: |
-              npm install
-              npm run build --if-present
-              npm run test --if-present
-            displayName: "npm install, build and test"
+  - task: ArchiveFiles@2
+    displayName: "Archive files"
+    inputs:
+      rootFolderOrFile: "$(System.DefaultWorkingDirectory)"
+      includeRootFolder: false
+      archiveType: zip
+      archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+      replaceExistingArchive: true
 
-          - task: ArchiveFiles@2
-            displayName: "Archive files"
-            inputs:
-              rootFolderOrFile: "$(System.DefaultWorkingDirectory)"
-              includeRootFolder: false
-              archiveType: zip
-              archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-              replaceExistingArchive: true
-
-          - upload: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-            artifact: drop
-
-  - stage: Deploy
-    displayName: Deploy stage
-    dependsOn: Build
-    condition: succeeded()
-    jobs:
-      - deployment: Deploy
-        displayName: Deploy
-        environment: $(environmentName)
-        pool:
-          vmImage: $(vmImageName)
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                - task: AzureWebApp@1
-                  displayName: "Azure Web App Deploy: nodejs-azure-app-service"
-                  inputs:
-                    azureSubscription: $(azureSubscription)
-                    appType: webAppLinux
-                    appName: $(webAppName)
-                    runtimeStack: "NODE|10.10"
-                    package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
-                    startUpCommand: "pm2 start dist/index.js --no-daemon"
+  - task: AzureWebApp@1
+    displayName: "Azure Web App Deploy: nodejs-azure-app-service"
+    inputs:
+      azureSubscription: $(azureSubscription)
+      appType: webAppLinux
+      appName: $(webAppName)
+      runtimeStack: "NODE|10.10"
+      package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
+      startUpCommand: "pm2 start dist/index.js --no-daemon"
